Fix drop down menu overflow issue
Reorder nav links, account right

--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,6 @@ body {
     height: 200vh;
 }
 
-
-
-
 #search {
     background-color: var(--clr-light);
     border: 1px solid black;
@@ -192,10 +189,11 @@ iframe[seamless] {
     /* background-color: var(--clr-transparent); */
     display: flex;
     justify-content: right;
+    align-items: baseline;
     padding-inline: 5px;
 
     /* transform: translateY(-100%); */
-    overflow: hidden;
+    overflow:hidden;
     max-height: 0px;
     transition: max-height 300ms 0s ease-in-out;
 
@@ -209,21 +207,26 @@ iframe[seamless] {
     top:84px;  /* header height */
 }
 
+#drop-down-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .drop-down {
     display: grid;
     background-color: #ffffff64;
     width: 180px;
 
-    position: absolute;
-    top: 100px;
-    right: 160px;
+    position: relative;
+    top: 10px;
     border-radius: 15px;
 
-    max-height: 0px;
+    max-height: 500px;
     transition: max-height 300ms ease;
     overflow: hidden;
 
-    margin-top: 50px;
+    
 }
 .drop-down-btn{
     display: flex;
@@ -264,7 +267,7 @@ iframe[seamless] {
 }
 
 .drop-down-btn p {
-    font-weight: lighter;
+    font-weight: light;
 }
 
 .clickable:hover {
@@ -297,20 +300,6 @@ nav a:hover {
     background-color: var(--clr-dark-blue);
     color: var(--clr-light);
 }
-
-/* nav > *:hover a{
-    color: var(--clr-light);
-} */
-
-
-/*
-nav a {
-    border: 1px red solid;
-    margin: 5px;
-    padding: 5px;
-    display: inline-block;
-    
-} */
 
 #MainBlock {
     overflow: hidden;
